refactor(eslint): refactor clean code
