# app.js
@@ -5,7 +5,7 @@ const bodyParser = require('body-parser');
 const dotenv = require('dotenv');
 
 const  Users = require('./src/routes/user.route.js');
-const Combinations = require("./src/routes/conbination.route.js")
+const Combination = require("./src/routes/conbination.route.js")
 const Blackjack = require('./src/routes/blackjack.route.js')
 const Cesar = require('./src/routes/cesar.route.js')
 const Repeat = require('./src/routes/repeat.route.js')
@@ -24,7 +24,7 @@ app.use('/api-airbatech', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
 // ROUTES
 app.use('/users', Users)
-app.use('/combinations', Combinations)
+app.use('/combinations', Combination)
 app.use('/blackjack', Blackjack)
 app.use('/cesar', Cesar)
 app.use('/repeat', Repeat)
